--- a/sm.css
+++ b/sm.css
@@ -13,14 +13,25 @@ html, body {
     height: 100%;
 }
 
-#controls {
+.control {
     position: absolute;
-    bottom: 0;
-    left: 0;
-    margin-left: 15px;
-    margin-bottom: 25px;
     background-color: rgba(17, 17, 17, 0.65);
     border-radius: 5px;
     padding: 8px;
     color: #ffffff;
+}
+
+#locate-me {
+    bottom: 0;
+    right: 0;
+    margin-right: 15px;
+    margin-bottom: 25px;
+}
+
+#controls {
+    
+    bottom: 0;
+    left: 0;
+    margin-left: 15px;
+    margin-bottom: 25px;
 }
